findOutput: refine order of screens for previous/next

A screen should be considered further top (and therefore more previous) only it is strictly above the other, and not if they are horizontally on the same line with only the vertical centers differing (eg because one is large than the other)

BUG: 467996